--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0",
     "@openzeppelin/test-helpers": "^0.5.6",
-    "chai": "^4.2.0"
+    "@truffle/hdwallet-provider": "^1.0.42",
+    "chai": "^4.2.0",
+    "dotenv": "^8.2.0"
   }
 }
