--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "semantic-ui-react": "^1.2.1",
+    "web3": "^1.2.11"
   },
   "scripts": {
     "start": "react-scripts start",
